2011-02-27  Robert Larice
 * src/spicelib/devices/isrc/isrcask.c ,
 * src/spicelib/devices/vsrc/vsrcload.c ,
 * src/spicelib/devices/vsrc/vsrcpar.c :
    bug fix, three of them (vsrc, isrc)

2011-02-22 Dietmar Warning
 * diode & bjt temperature model update, now it is possible to select the
   temperature equations with tlev and tlevc in similar manner as in other well
   known simulators

2011-02-21 Dietmar Warning
 * inpcom.c: exclude appending m= to .model cards
 * adms/admst/ngspiceMakefile.am.xml: rm some obsolete files
   on maintainer-clean action

2011-02-19  Holger Vogt
 * ngspice.h: _snprintf for MS Visual Studio
 * measure.c, com_measure.c: update FIND .. WHEN measurements

2011-02-19  Robert Larice
 * configure.ac ,
 * examples/transient-noise/shot_ng.cir ,
 * src/Makefile.am ,
 * src/frontend/trannoise/FastNorm3.c :
    cleanup some whitespace errors and prototypes

2011-02-19  Robert Larice
 * src/frontend/numparam/Makefile.am ,
 * src/frontend/numparam/general.h ,
 * src/frontend/numparam/mystring.c ,
 * src/frontend/numparam/numparam.h ,
 * src/frontend/numparam/xpressn.c ,
 * Removed src/frontend/numparam/downgrad.txt ,
 * Removed src/frontend/numparam/washprog.c :
    numparm, remove unused artifacts

2011-02-19  Robert Larice
 * src/frontend/numparam/mystring.c ,
 * src/frontend/numparam/nupatest.c ,
 * src/frontend/numparam/spicenum.c ,
 * src/frontend/numparam/xpressn.c :
    numparm, un-pascal-ify, ws() wln()

2011-02-19  Robert Larice
 * src/frontend/numparam/xpressn.c :
    numparm, cleanup, (())

2011-02-19  Robert Larice
 * src/frontend/numparam/xpressn.c :
    numparm, cleanup, {}

2011-02-19  Robert Larice
 * src/frontend/numparam/mystring.c ,
 * src/frontend/numparam/xpressn.c :
    numparm, rewrite some conditional expressions

2011-02-19  Robert Larice
 * src/frontend/numparam/mystring.c :
    silence compiler warnings

2011-02-19  Robert Larice
 * src/frontend/numparam/mystring.c ,
 * src/frontend/numparam/xpressn.c :